@@ -22,4 +22,7 @@ Changes log
  - All HTTPS server connectors (Grizzly, Jetty and Simple) now have two configuration
    parameters to indicates whether a client authentication is wanted or required.
    Suggested by Toby Thain and Chuck Hinson.
+ - A request attribute "org.restlet.https.clientCertificates" containing the list of SSL
+   session certificates (if available and accessible) is now available. Currently, only
+   the Simple connector is capable or setting it. Suggested by Toby Chain.
    
